# SFML-Snake

./: Build.sh  CMakeLists.txt  Food.cpp  Food.hpp  Run.sh  Snake.cpp  main.cpp  testRunner.cpp
Headers/: Config.hpp  Controller.cppm  Controller.hpp  Food.cppm  Food.hpp  Global.hpp  RenderingUtils.cppm  RenderingUtils.hpp  Snake.cppm  Snake.hpp
Modules/: Controller.cppm  Food.cppm  NeuralNetwork.cppm  RenderingUtils.cppm  Snake.cppm
Source/: Controller.cpp  Food.cpp  NeuralNetwork.cpp  RenderingUtils.cpp  Snake.cpp
